# icp_cpp

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  justfile  vcpkg.json
app/: CMakeLists.txt
app/src/: main.cpp
core/: CMakeLists.txt
core/include/: correspondences.hpp  icp.hpp  kdtree.hpp  math_utils.hpp  minimization.hpp  time_utils.hpp
core/src/: icp  icp.cpp
io/: CMakeLists.txt
io/include/: io.hpp
io/src/: io.cpp
src/: main.cpp
